--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<h1>Les iPhone peuvent être piratés par un simple mail vérolé.</h1>
 						</p>
 						<figure>
-							<img src="66d1c3461890b22dae3d617bb0 (2).jpg" alt="image_entete">
+							<img src="66d1c3461890b22dae3d617bb0 (2).jpg" alt="image_entete" width="900px" height="auto">
 
 						</figure>
 						
